Quien me manda a querer meter mas logica de negocio? ahora los tests se volvieron una porqueria.
Add no_show and fee yoque se, ya ni me acuerdo